2022-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "2022findeevangg" (now) has subtitles.

2022-12-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2019" (now) has subtitles.

2022-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-mpv-links): new function.

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "2021orgfornonusers" (now) has subtitles.

2022-12-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-libera-bufferp, ee-find-libera-links): new
	functions.
	(ee-fhl-main-program): added an `(:if (ee-libera-bufferp) ...)'.

2022-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-epackages): renamed to `find-epackages0'.
	(find-epackages): new function.
	(ee-goto-position-package, ee-packages-nline-for)
	(ee-packages-nlines-for, ee-packages-nlines-and-names): new
	functions.

	* eev-elinks.el (ee-find-epackage-links0): use the new
	`find-epackages', that has the same name as the old one but
	different arguments.

	* eev-hlinks.el (ee-packages-package-here): new function.
	(ee-find-epackages-links): use `ee-packages-package-here' and the
	new `find-epackages'.

2022-12-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-struct-to-triples, find-estructt): new
	functions.

2022-12-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-underlinewsp-re): new function.
	(ee-efunctiondescr-re): use `ee-underlinewsp-re'.

2022-12-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-eev2022pyvideo): new function.
	(ee-1stclassvideos-info): added an entry for "eev2022py".

2022-12-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-rstdoc-intro): added some sections.

	* eev-tlinks.el (find-rstdoc-links): use another name for the
	temporary buffer.
